[Add] Consultations Module GET devices Api & POST quotes Api Added
